best-practices/disallow-empty-ingress-host/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-empty-ingress-host
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-empty-ingress-host.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-ingress.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: no-host-ingress.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: no-host-fail-first.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: no-host-success-first.yaml
